package Lab2.src;

public enum EstadoBoleto {
    Disponible,
    Vendido
}
